[Win] Warning fix. https://bugs.webkit.org/show_bug.cgi?id=161043

Reviewed by Mark Lam.

Ignore warning about bit shift by too large amount.

* jit/PCToCodeOriginMap.cpp:


Canonical link: https://commits.webkit.org/179219@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204769 268f45cc-cd09-0410-ab3c-d52691b4dbfc