Source/JavaScriptCore/jit/PCToCodeOriginMap.cpp
@@ -32,6 +32,11 @@
 #include "DFGNode.h"
 #include "LinkBuffer.h"
 
+#if COMPILER(MSVC)
+// See https://msdn.microsoft.com/en-us/library/4wz07268.aspx
+#pragma warning(disable: 4333)
+#endif
+
 namespace JSC {
 
 namespace {
